--- a/SV07/start.cfg
+++ b/SV07/start.cfg
@@ -1,1 +1,19 @@
+[gcode_macro DRUCK_START]
+gcode:
+ M84 E ; Disable E Motor for probe accuracy on direct drive systems
+ G90 ;Absolute positioning
+ G92 E0 ; Reset Extruder distance to 0
+ G1 E-1 ; Retracts filament to prevent blobs during probing
+ G92 E0 ; Reset Extruder distance to 0
+ G28 ; home all axes
+# Z_TILT_ADJUST
+ BED_MESH_PROFILE LOAD=SV07-Plus ; Loads the mesh - now has to be done explicitly, not automatically loaded anymore
+ G92 E0     ; reset extruder
+ G1 Z1.0 F3000    ; move z up little to prevent scratching of surface
+ G1 X-0.1 Y20 Z0.3 F5000.0  ; move to start-line position
+ G1 X-0.1 Y100.0 Z0.3 F500.0 E26  ; draw 1st line
+ G1 X0.4 Y100.0 Z0.3 F5000.0  ; move to side a little
+ G1 X0.4 Y20 Z0.3 F500.0 E30  ; draw 2nd line
+ G92 E0     ; reset extruder
+ G1 Z1.0 F3000    ; move z up little to prevent scratching of surface
 
