--- a/printer.cfg
+++ b/printer.cfg
@@ -384,14 +384,12 @@ move_check_distance: 3
 sensor_type: temperature_host
 
 #################################################
-#Fans
+#Lüfter
 #################################################
 
-# External fan, overwrite newer firmware behaviour.
 [fan] 
 pin: PE9 # Das ist der normale Bauteilkühler.
 
-# External fan, overwrite newer firmware behaviour.
 [fan_generic external_part_fan]
 pin:PE13 # Das ist der Externe Bauteilkühler.
 
