--- a/printer.cfg
+++ b/printer.cfg
@@ -34,10 +34,7 @@ path:/home/mks/printer_data/gcodes
 
 [idle_timeout]
 gcode:
-    RESPOND TYPE=echo MSG="No operations in 10min!"
-#   A list of G-Code commands to execute on an idle timeout. See
-#   docs/Command_Templates.md for G-Code format. The default is to run
-#   "TURN_OFF_HEATERS" and "M84".
+    RESPOND TYPE=echo MSG="Nichts passiert seit 10min!"
     TURN_OFF_HEATERS
     M84 X Y E # Z
 timeout: 600
@@ -101,7 +98,7 @@ gcode:
     M140 S0 ;Turn-off bed
     G90
     G1 X10 Y290 F6000
-    M84 X Y E ;Disable all steppers but Z
+    M84 X Y E ;Deaktiviert alle Stepper außer Z
 
 [gcode_macro PAUSE] 
 description: Pause the actual running print
@@ -164,22 +161,6 @@ gcode:
     {% else %}
         RESPOND TYPE=echo MSG="Please Insert filament in Sensor!"
     {% endif %} 
-
-[gcode_macro END_PRINT]
-gcode:
-    G91 ;Relative positionning
-    G1 E-2 F500 ;Retract a bit
-    G1 E-2 Z0.2 F200 ;Retract and raise Z
-    G1 X5 Y5 F3000 ;Wipe out
-    G1 Z1 ;Raise Z more
-    M106 S0 ;Turn-off fan
-    M104 S0 ;Turn-off hotend
-    M140 S0 ;Turn-off bed
-    G90 ;Absolute positionning
-    G1 X10 Y290 ;Present print
-
-    M84 X Y E ;Disable all steppers but Z
-    RESPOND TYPE=echo MSG="Finish Print!"
 
 [gcode_macro LOAD_FILAMENT]
 gcode:
@@ -408,13 +389,13 @@ heater: heater_bed, extruder
 #################################################
 [screws_tilt_adjust]
 screw1: 4, 58
-screw1_name: front left screw
+screw1_name: Vorn Links
 screw2: 243, 58
-screw2_name: front right screw
+screw2_name: Vorn Rechts
 screw3: 243, 290
-screw3_name: rear right screw
+screw3_name: Hinten Rechts
 screw4: 4, 290
-screw4_name: rear left screw
+screw4_name: Hinten Links
 horizontal_move_z: 5.
 speed: 200.
 screw_thread: CW-M4
